--- a/sidebar.html
+++ b/sidebar.html
@@ -67,7 +67,7 @@
             </a></li>
 
         <li class="list-group-item  d-flex justify-content-between border-0 dropdown-item" aria-current="true">
-            <a href="#"
+            <a href="quest-approval.html"
                 class="active d-flex align-items-center text-reset  text-decoration-none align-items-center d-flex"
                 aria-current="true">
                 <i class="bi bi-shield-shaded me-3 fs-6 text-dark"></i> Quest Approvals
