--- a/students.html
+++ b/students.html
@@ -7,7 +7,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- link CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.4/bootstrap-icons.svg">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.4/font/bootstrap-icons.min.css"
         integrity="sha512-yU7+yXTc4VUanLSjkZq+buQN3afNA4j2ap/mxvdr440P5aW9np9vIr2JMZ2E5DuYeC9bAoH9CuCR7SJlXAa4pg=="
@@ -35,8 +34,10 @@
               </div>
                 <!-------Sidebar End------>
                 <div class="col bg-white p-4 border position-relative ps-lg-5 overflow-auto">
+                  <div class="d-flex justify-content-between align-items-center">
                   <h1 class="fs-3 mb-0">Students</h1>
-                    <div class="d-flex justify-content-between align-items-center">
+                  <i class="bi bi-people-fill fs-3"></i>
+                </div>
                       <div class="nav-view mt-4">
                         <nav>
                             <div class="nav nav-tabs" id="nav-tab" role="tablist">
@@ -47,8 +48,6 @@
                             </div>
                         </nav>
                       </div>
-                        <i class="fa fa-users fs-3"></i>
-                    </div>
                     <div class="table-layout mt-4">
                         <div class="select">
                             <select class="form-control" id="locale">
