--- a/announcements-archived.html
+++ b/announcements-archived.html
@@ -25,40 +25,24 @@
     <!-- body start here -->
     <section class="content-view vh-100 mt-2">
         <div class="container-xxl">
-            <div class="row">
-               <!-------Sidebar Start------>
-               <div class="col-md-3 px-3 py-4 d-lg-inline-block d-none border border-end-0" id="mySidebar">
-                <div id="sidebar" class="sidebar-hide"></div>
-            </div>
-            <!-------Sidebar End------>
-            <div class="col bg-white p-4 border position-relative ps-lg-5">
+            <div class="row ">
+                <!-------Sidebar Start------>
+                <div class="col-md-3 px-3 py-4 d-lg-inline-block d-none border border-end-0" id="mySidebar">
+                    <div id="sidebar" class="sidebar-hide"></div>
+                </div>
+                <!-------Sidebar End------>
+                <div class="col bg-white p-4 border position-relative ps-lg-5">
                     <div class="d-flex justify-content-between align-items-center">
-                        <h1 class="fs-3 mb-0">Create New Campaign</h1>
-                        <i class="fa fa-compass pull-right fs-3"></i>
+                        <h1 class="fs-3 mb-0">Announcements
+                            <div class="btn-group btn-group-sm ms-md-3  rounded-pill overflow-hidden border mt-md-0 mt-3" role="group" aria-label="Small button group">
+                                <a href="announcements.html" class="btn btn-outline-dark border-0 fs-6 px-3 py-2">Current</a>
+                                <a href="announcements-archived.html" class="btn btn-outline-dark border-0 fs-6 text-white bg-primary px-3 py-2"><b>Archived</b></a>
+                            </div>
+                            <a href="announcements-create.html" class="btn btn-success ms-2 mt-md-0 mt-3"><i class="bi bi-plus-circle"></i> New</a>
+                        </h1>
+                        <i class="bi bi-journal-bookmark-fill fs-3"></i>
                     </div>
-                    <div class="border mt-4 p-4">
-                        <form>
-                            <div class="mb-2">
-                                <label for="exampleInputEmail1" class="form-label" required> Title <sup>*</sup></label>
-                                <input type="email" class="form-control" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp">
-                            </div>
-                            <div class="mb-2">
-                                <label for="exampleInputPassword1" class="form-label">Icon</label>
-                                <input type="file" class="form-control" id="exampleInputPassword1">
-                            </div>
-                            <div class="mb-2 form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck1" checked>
-                                <label class="form-check-label" for="exampleCheck1">Active</label>
-                            </div>
-                            <div class="mb-2">
-                                <p class="text-reset">Quests that are a part of an inactive campaign won't appear on
-                                    quest maps and won't be available to students.</p>
-                            </div>
-                            <button type="button" class="btn btn-light border">Cancel</button>
-                            <button type="submit" class="btn btn-primary ms-2">Create</button>
-                        </form>
-                    </div>
+                    <p class="mt-3">This page if visible to staff only.</p>
                 </div>
             </div>
         </div>
@@ -76,12 +60,12 @@
         integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
-       $(function () {
+        $(function () {
             $("#header").load("header.html");
             $("#sidebar").load("sidebar.html");
             $("#footer").load("footer.html");
         });
-          </script>
+    </script>
 </body>
 
 </html>
