--- a/maps.html
+++ b/maps.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- link CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.4/bootstrap-icons.svg">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.4/font/bootstrap-icons.min.css"
         integrity="sha512-yU7+yXTc4VUanLSjkZq+buQN3afNA4j2ap/mxvdr440P5aW9np9vIr2JMZ2E5DuYeC9bAoH9CuCR7SJlXAa4pg=="
@@ -24,7 +23,7 @@
     <div id="header" class="position-relative" style="z-index: 9;"></div>
     <!-- header end here -->
     <!-- body start here -->
-    <section class="content-view mt-2">
+    <section class="content-view vh-100 mt-2">
         <div class="container-xxl">
             <div class="row ">
                 <!-------Sidebar Start------>
@@ -42,13 +41,13 @@
                     to view the Rank-based maps.</p>
                    <div class="row justify-content-end mt-4">
                     <div class="col-auto">
-                        <button type="button" class="btn btn-light border"><i class="bi bi-printer-fill"></i> Print</button>
-                        <button type="button" class="btn btn-light border"><i class="bi bi-arrows-fullscreen"></i> Fullscreen</button>
-                        <button type="button" class="btn btn-light border"><i class="bi bi-file-arrow-up"></i></button>
-                        <button type="button" class="btn btn-primary"><i class="bi bi-arrow-clockwise"></i></button>
-                        <button type="button" class="btn btn-secondary"><i class="bi bi-arrow-clockwise"></i></button>
-                        <button type="button" class="btn btn-success"><i class="bi bi-pencil"></i></button>
-                        <button type="button" class="btn btn-danger"><i class="bi bi-trash"></i></button>
+                        <button type="button" class="btn btn-light border mb-1"><i class="bi bi-printer-fill"></i> Print</button>
+                        <button type="button" class="btn btn-light border mb-1"><i class="bi bi-arrows-fullscreen"></i> Fullscreen</button>
+                        <button type="button" class="btn btn-light border mb-1"><i class="bi bi-file-arrow-up"></i></button>
+                        <button type="button" class="btn btn-primary mb-1"><i class="bi bi-arrow-clockwise"></i></button>
+                        <button type="button" class="btn btn-secondary mb-1"><i class="bi bi-arrow-clockwise"></i></button>
+                        <button type="button" class="btn btn-success mb-1"><i class="bi bi-pencil"></i></button>
+                        <button type="button" class="btn btn-danger mb-1"><i class="bi bi-trash"></i></button>
                     </div>
                    </div>
                    <div class="bg-light border text-center py-4 mt-2 rounded-3">
