--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- link CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.4/bootstrap-icons.svg">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.4/font/bootstrap-icons.min.css"
         integrity="sha512-yU7+yXTc4VUanLSjkZq+buQN3afNA4j2ap/mxvdr440P5aW9np9vIr2JMZ2E5DuYeC9bAoH9CuCR7SJlXAa4pg=="
@@ -34,7 +33,7 @@
                 <!-------Sidebar End------>
                 <div class="col bg-white p-4 border position-relative ps-lg-5">
                     <div class="d-flex justify-content-between align-items-center">
-                        <h1 class="fs-3 mb-0">Admin Portfolio <a href="campaigns-add.html"> <button type="button"
+                        <h1 class="fs-3 mb-0">Admin Portfolio <a href="portfolio-edit.html"> <button type="button"
                                     class="btn btn-success ms-2"><i class="bi bi-gear-fill"></i> Edit</button></a></h1>
                         <i class="bi bi-file-earmark-image-fill fs-3"></i>
                     </div>
