sidebar and header UI changes fix

--- a/delete.html
+++ b/delete.html
@@ -22,7 +22,7 @@
     <div id="header" class="position-relative" style="z-index: 9;"></div>
     <!-- header end here -->
     <!-- body start here -->
-    <section class="content-view vh-100 mt-2">
+    <section class="content-view vh-100">
         <div class="container-xxl">
             <div class="row ">
                 <!-------Sidebar Start------>
