--- a/header.html
+++ b/header.html
@@ -2,14 +2,14 @@
 <!-- style link for all pages common -->
 
 
-<header class="navbar-light bg-light border-bottom py-2">
+<header class="navbar-light bg-light border-bottom-0 py-2">
     <div class="container-xxl">
         <!-- Navbar -->
         <div class="row align-items-center">
             <div class="col pe-md-2 pe-0">
                 <!-- only desktop view -->
                 <nav class="navbar navbar-expand-lg navbar-light bg-light py-0 justify-content-start d-lg-flex d-none">
-                    <a class="navbar-brand py-0" href="index.html"><img src="images/logo.png" height="37" alt="MDB Logo"
+                    <a class="navbar-brand py-0" href="quest-approval.html"><img src="images/logo.png" height="37" alt="MDB Logo"
                             loading="lazy" /></a>
                     <button class="navbar-toggler px-0 pt-0" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1"
@@ -31,7 +31,7 @@
 
                 <!-- only mobile view sidebar -->
                 <nav class="navbar navbar-expand navbar-light bg-light py-0 justify-content-start d-lg-none d-flex">
-                    <a class="navbar-brand py-0" href="index.html"><img src="images/logo.png" height="37" alt="MDB Logo"
+                    <a class="navbar-brand py-0" href="quest-approval.html"><img src="images/logo.png" height="37" alt="MDB Logo"
                             loading="lazy" /></a>
 
                     <div class="nav-item dropdown">
