--- a/sidebar.html
+++ b/sidebar.html
@@ -2,11 +2,7 @@
     <div class="d-flex justify-content-between border-bottom border-gray">
         <img id="logo" src="images/logo-1" class="img img-rounded img-responsive center-block w-100 pb-3"
             alt="My Byte Deck Banner">
-        <img id="logo2" src="images/logo.png" class="img img-rounded img-responsive center-block w-100 pb-3"
-            alt="MDB Logo" loading="lazy" style="display: none;" />
     </div>
-    <button type="button" onclick="openNav()" class="bg-light border position-absolute top-0 border-start-0"
-        style="right: -46px; z-index: 9;"><i class="bi bi-arrow-left-short"></i></button>
     <ul class="list-group mt-3 nav-list overflow-hidden">
         <li class="mb-1">
             <button
@@ -17,13 +13,13 @@
             </button>
             <div class="collapse" id="dashboard-collapse">
                 <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small border">
-                    <li><a class="dropdown-item border-bottom py-2 px-4" href="campaigns.html"><i
+                    <li><a class="dropdown-item border-bottom py-2 " href="campaigns.html"><i
                                 class="bi bi-compass-fill me-2"></i> Campaigns</a></li>
-                    <li><a class="dropdown-item border-bottom  py-2 px-4" href="#"> <i
+                    <li><a class="dropdown-item border-bottom  py-2" href="#"> <i
                                 class="bi bi-shield-shaded me-1 me-2"></i>
                             Draft Quests</a>
                     </li>
-                    <li><a class="dropdown-item py-2 px-4" href="#"><i class="bi bi-shield-shaded me-1 me-2"></i> Common
+                    <li><a class="dropdown-item py-2 " href="#"><i class="bi bi-info-circle-fill me-2"></i> Common
                             Quest
                             Info</a></li>
                 </ul>
@@ -38,7 +34,7 @@
             </button>
             <div class="collapse" id="dashboard-collapse1">
                 <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small border">
-                    <li><a class="dropdown-item py-2 px-4" href="#">
+                    <li><a class="dropdown-item py-2" href="#">
                             <i class="bi bi-patch-check-fill me-2"></i> Badge Types</a></li>
                 </ul>
             </div>
@@ -77,32 +73,3 @@
     </ul>
 
 </div>
-
-
-<script>
-    // sidebar min function
-    const element = document.getElementById("mySidebar");
-    // Function to toggle the background color
-    function openNav() {
-        if (element.style.width === "78px") {
-            element.style.width = "";
-        } else {
-            element.style.width = "78px";
-        }
-        if (element1.style.display === "none") {
-            element1.style.display = "";
-        } else {
-            element1.style.display = "none";
-        }
-        if (element2.style.display === "none") {
-            element2.style.display = "block";
-        } else {
-            element2.style.display = "none";
-        }
-    }
-
-    // sidebar min function
-    const element1 = document.getElementById("logo");
-    const element2 = document.getElementById("logo2");
-
-</script>
