--- a/sidebar.html
+++ b/sidebar.html
@@ -35,7 +35,7 @@
             <div class="collapse" id="dashboard-collapse1">
                 <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small border">
                     <li><a class="dropdown-item py-2" href="#">
-                            <i class="bi bi-patch-check-fill me-2"></i> Badge Types</a></li>
+                        <i class="bi bi-file-text-fill me-2"></i> Badge Types</a></li>
                 </ul>
             </div>
         </li>
